dclone package version history

Version 1.0-4, January 14, 2010
    * dclone and dcpar split: parallet computing features
      in separate package.

Version 1.0-3, December 14, 2009
    * lambdamax.diag: added back.
    * errlines: got col argument.
    * jags.fit: if n.iter=0, the (updated) JAGS model is returned
      instead of an MCMC object.
    * update.mcmc.list: function to perform automatic updates of an
      MCMC object, until a desired statistics value 
      (e.g. R_hat < 1.1) reached.

Version 1.0-2, December 4, 2009
    * updated.model attr in jags.fit output for further updating.
    * bg arg in errlines and box.bg in plot.dctable for background
      color of boxes.

Version 1.0-1, November 19, 2009
    * custommodel function added, fitting functions modified.

Version 1.0-0, November 16, 2009
    * Unload problem fixed (reported by Brian D Ripley).
    * dctable now can take more than one models as arguments.
    * Code annotated, documentation revised.

Version 0.9-0, October 19, 2009
    * First CRAN release with basic functionality.
    * Support for WinBUGS added.
    * Initial functionality is stable.