@@ -3,6 +3,7 @@ dclone package version history
 Version 1.0-4, January 14, 2010
     * dclone and dcpar split: parallet computing features
       in separate package.
+    * chisq.diag: diagnostic tool added.
 
 Version 1.0-3, December 14, 2009
     * lambdamax.diag: added back.
